--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -190,7 +190,7 @@
     <div class="row" style="align-items: center;">
       <div class="form-group" style="flex: 1 1 48%;">
         <label>Assignment Name</label>
-        <input type="text" name="assignment_name" />
+        <input type="text" name="assignment_name" required />
       </div>
       <div class="form-group" style="flex: 1 1 48%; display: flex; align-items: center; height: 100%;">
         <div class="instruction-note" style="margin: 0; transform: translateY(9px);">
