--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -181,7 +181,7 @@
         <button class="tab-button active" onclick="showTab('setup')">Assignment Setup</button>
         <button class="tab-button" onclick="showTab('gospel')">Gospel-Centered</button>
         <button class="tab-button" onclick="showTab('instructor')">Instructor Review</button>
-        <button class="tab-button" onclick="showTab('reviews')">Pending Reviews</button>
+        <button class="tab-button" onclick="showTab('reviews')">Submission History</button>
         <button class="tab-button" onclick="showTab('logs')">Activity Logs</button>
       </div>
 
